# games_server

./: CMakeLists.txt  README.md  client_certificate.pem  game_server.cpp  game_server.h  main.cpp  send_task.cpp  server.cpp  server.h  server_certificate.pem  server_private_key.pem  servers.cpp  servers.h  snake.cpp  snake.h  snake_game.cpp  snake_game.h  timer.h
include/: accept_task.h  connection_initializers.h  game_server.h  privileged_accept_task.h  privileged_connection.h  privileged_send_task.h  privileged_server.h  program_options.h  send_task.h  server.h  servers.h  snake.h  snake_game.h  ssl_data.h  timeout_task.h  timer.h
snake_client/: CMakeLists.txt  client_connection.cpp  client_connection.h  data_receiver.cpp  data_receiver.h  main.cpp  main.qml  network.cpp  network.h  qml.qrc  qt_ui_iface.cpp  qt_ui_iface.h  receive_worker.cpp  send_worker.cpp  send_worker.h  snakeModel.cpp  snakeModel.h  snake_client.cpp  snake_client.h  ui_iface.h
snake_client/include/: network.h  receive_worker.h  send_worker.h  snake_client.h  socket_option.h  test_iface.h  ui_iface.h
snake_client/src/: main.cpp  network.cpp  receive_worker.cpp  send_worker.cpp  snake_client.cpp  socket_option.cpp
snake_client/tests/: CMakeLists.txt  snake_client_ut.cpp
snake_client/tests/mocks/: network_mock.h  ui_iface_mock.cpp  ui_iface_mock.h
snake_client/ui/: Enum.qml  main.qml  qt_ui_iface.cpp  qt_ui_iface.h  snakeModel.cpp  snakeModel.h
src/: accept_task.cpp  connection_initializers.cpp  game_server.cpp  main.cpp  privileged_accept_task.cpp  privileged_connection.cpp  privileged_send_task.cpp  privileged_server.cpp  program_options.cpp  send_task.cpp  server.cpp  servers.cpp  snake.cpp  snake_game.cpp  socket_option.cpp  timeout_task.cpp
tests/: CMakeLists.txt  connection_initializers_fake.cpp  game_server_ut.cpp  servers_ut.cpp  snake_game_ut.cpp  snake_ut.cpp  socket_option_fake.cpp  timer_ut.cpp
tests/mocks/: accept_task_mock.h  priv_accept_task_mock.h  priv_connection_mock.h  server_mock.h  servers_mock.h  snake_game_mock.h  timeout_task_mock.h  timer_mock.h
